# cli

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  compare.html  index.html  installation.html  print.html  release.md  signing-keys.asc
.github/: issue_template.md
.github/workflows/: ci.yml
doc/: SUMMARY.md  book.sh  book.toml  compare.md  index.md  installation.md
doc/md/: book.toml  index.md
doc/md/vault/: about.md  first-steps.md
doc/rs/: Cargo.toml
doc/rs/src/: lib.rs  main.rs
doc/rs/tests/: all.rs
doc/rs/tests/book/: SUMMARY.md  book.toml  index.md
doc/src/: SUMMARY.md  compare.md  index.md  installation.md  summary.sh
doc/src/tools/: about.md  extract.md  process.md  substitute.md
doc/src/tools/fixtures/extract/: credentials.yml
doc/src/vault/: add.md  edit.md  first-steps.md  list.md
doc/src/vault/partitions/: about.md  add.md  remove.md
doc/src/vault/recipients/: about.md  init.md  list.md
doc/vault/: about.md  first-steps.md  init.md  remove.md  show.md
doc/vault/recipients/: add.md  remove.md
etc/brew/: sheesy.rb.in
etc/docker/: Dockerfile.alpine-docs  Dockerfile.alpine-gpg2  Dockerfile.asciinema  Dockerfile.musl-build  Dockerfile.rust  Dockerfile.travis-ubuntu
extract/: Cargo.toml
extract/src/: lib.rs
lib/extract/: Cargo.toml
lib/extract/src/: lib.rs
lib/substitute/: Cargo.toml
lib/substitute/src/: lib.rs  spec.rs  substitute.rs
lib/substitute/tests/: spec.rs
lib/tools/: Cargo.toml
lib/tools/src/: lib.rs
lib/tools/src/merge/: mod.rs  types.rs  util.rs
lib/tools/src/process/: mod.rs  types.rs  util.rs
lib/tools/src/substitute/: mod.rs  spec.rs  util.rs
lib/tools/tests/: spec.rs
lib/types/: Cargo.toml
lib/types/src/: base.rs  lib.rs  spec.rs
lib/types/tests/: spec.rs
lib/vault/: Cargo.toml
lib/vault/src/: base.rs  crypt.rs  dispatch.rs  error.rs  init.rs  lib.rs  partitions.rs  recipients.rs  resource.rs  spec.rs  types.rs  util.rs  vault.rs
lib/vault/src/dispatch/: base.rs  doit.rs
lib/vault/src/recipients/: add.rs  mod.rs  other.rs  remove.rs  util.rs
lib/vault/tests/: spec.rs  vault-serde.rs
pkg/brew/: sheesy.rb  sheesy.rb.in
src/: cli.rs  main.rs  parse.rs  sy.rs  sye.rs  syp.rs  sys.rs  syv.rs  types.rs  util.rs
src/cli/: completions.rs  extract.rs  merge.rs  mod.rs  substitute.rs  util.rs  vault.rs
src/dispatch/: base.rs  doit.rs  mod.rs
src/dispatch/vault/: base.rs  doit.rs
src/parse/: completions.rs  extract.rs  merge.rs  mod.rs  substitute.rs  util.rs  vault.rs
tests/: gpg-helpers.sh  included-stateless-extract.sh  included-stateless-merge.sh  included-stateless-substitute.sh  included-stateless-vault.sh  journey-test.sh  stateful-journey-test.sh  stateless-journey-test.sh  utilities.sh
tests/journeys/: 00-vault-init-no-gpg.sh  01-vault-init.sh  01-vault.sh  02-vault-edit.sh  03-vault-recipients-verified.sh  03-vault-recipients.sh  04-vault-recipients-unverified.sh  05-vault-recipients-remove.sh  06-vault-partition.sh  07-vault-partition-and-recipients.sh  08-vault-always-encrypt.sh  zz-getting-started.sh  zz-vault-gpg1.sh
tests/journeys/dockerfile-gen/: 00-vault-init-no-gpg.sh  01-vault-init.sh  zz-getting-started.sh  zz-vault-gpg1.sh
tests/journeys/fixtures/: a.sec.asc  b.pub.asc  b.sec.asc  c.sec.asc  default-vault.yml  tester.sec.asc
tests/journeys/fixtures/extract/: sample.yml
tests/journeys/fixtures/merge/: complex.yml  multi-docs-1.yml  multi-docs-2.yml  multi-docs-conflict.yml  wrong-answer.json  wrong-answer.yml
tests/journeys/fixtures/snapshots/: gpg1-vault-recipient-add-untrusted-user-with-fingerprint  successful-vault-init  vault-add-no-gpg  vault-init-no-gpg  vault-init-will-not-overwrite-vault-config  vault-init-will-not-write-into-existing-nonempty-directory  vault-init-will-overwrite-recipients-file  vault-init-with-at-argument  vault-init-with-multiple-specified-keys  vault-init-with-multiple-viable-keys  vault-known-resource-edit-editor-not-in-path  vault-list-with-name  vault-ls-with-single-resource  vault-recipient-add-b-failure  vault-recipient-add-b-recipients  vault-recipient-add-c  vault-recipient-add-diff-gpg-list-packets-signed-key  vault-recipient-add-from-keychain  vault-recipient-add-untrusted-user-a-with-fingerprint-ambiguously  vault-recipient-add-untrusted-user-a-with-fingerprint-invalid-signing-key  vault-recipient-add-untrusted-user-with-fingerprint  vault-recipient-add-unverified-invalid-fingerprint  vault-recipient-add-valid-fingerprint-key-not-present-in-keys-dir  vault-recipient-remove-failure-one-correct-and-one-unknown-key  vault-recipient-remove-failure-unknown-key  vault-recipients-add-unverified-failure-with-multi-recipient-keyfile  vault-recipients-init-single-secret-key  vault-recipients-list-after-adding-c-successfully  vault-recipients-list-after-requesting-membership  vault-resource-add-from-stdin-no-tty  vault-resource-add-overwrite-protection  vault-resource-add-relative-dir-success  vault-resource-edit-encrypt-failure-no-try-encrypt  vault-resource-remove-multiple-existing-after  vault-resource-remove-non-existing  vault-show-fail-for-new-secret-as-unknown-user  vault-show-failure-as-unknown-user  vault-show-failure-encrypt-new-secret-missing-pub-key  vault-show-no-gpg  vault-unknown-resource-edit  (+1 more)
tests/journeys/fixtures/substitute/: complex.tpl  data-for-complex.tpl.yml  data.json.hbs  the-answer.hbs  with-partial.liquid
tests/journeys/fixtures/vault-init-single-user-with-multiple-signatures/: .gpg-id
tools/: about.html  extract.html  process.html  substitute.html
tools/fixtures/process/: game-config.yml  project.yml  team.yml
tools/fixtures/substitute/: base0.hbs  base1.hbs  data-processor  data.json  template.tpl
types/: Cargo.toml
types/src/: lib.rs
vault/: Cargo.toml  about.html  add.html  edit.html  first-steps.html  init.html  list.html  remove.html  show.html
vault/partitions/: about.html  add.html  remove.html
vault/recipients/: about.html  add.html  init.html  list.html  remove.html
vault/src/: lib.rs
(+228 files in other folders)
