[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-cli"
version = "3.0.0"

description = "The 'share-secrets-safely' CLI to interact with GPG/pass-like vaults."
license = "LGPL-2.1"
repository = "https://github.com/Byron/share-secrets-safely"
homepage = "https://github.com/Byron/share-secrets-safely"
documentation = "https://byron.github.io/share-secrets-safely"
keywords = ["gnupg", "pgp", "crypto"]
readme = "README.md"
exclude = ["HomebrewFormula", "tests/**", "pkg/**", "lib/**", "etc/**", "doc/**", "bin/**"]

[badges]
travis-ci = { repository = "Byron/share-secrets-safely" }

[[bin]]
name = "sy"
path = "src/main.rs"

[dependencies]
clap = "~2.31"
failure = "~0.1.1"
conv = "0.3.3"
lazy_static = "1.0.0"
gpgme = { version = "0.7.0" }

[dependencies.sheesy-tools]
path = "lib/tools"
version = "3.0.0"

[dependencies.sheesy-vault]
path = "lib/vault"
version = "3.0.0"

[workspace]
