[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-cli"
version = "3.3.0"

description = "The 'share-secrets-safely' CLI to interact with GPG/pass-like vaults."
license = "LGPL-2.1"
repository = "https://github.com/share-secrets-safely/cli"
homepage = "https://github.com/share-secrets-safely/cli"
documentation = "https://share-secrets-safely.github.io/cli"
keywords = ["gnupg", "pgp", "crypto"]
readme = "README.md"
exclude = ["HomebrewFormula", "tests/**", "pkg/**", "lib/**", "etc/**", "doc/**", "bin/**"]

[badges]
travis-ci = { repository = "share-secrets-safely/cli" }

[[bin]]
name = "sy"
path = "src/sy.rs"
doctest = false

[[bin]]
name = "syv"
path = "src/syv.rs"
doctest = false

[dependencies]
clap = "~2.31"
failure = "~0.1.1"
conv = "0.3.3"
lazy_static = "1.0.0"
gpgme = { version = "0.7.0" }
atty = "0.2.8"
glob = "0.2.11"
itertools = "0.7.7"

[dependencies.sheesy-tools]
path = "lib/tools"
version = "3.3.0"

[dependencies.sheesy-vault]
path = "lib/vault"
version = "3.3.0"

[workspace]
