[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-extract"
version = "1.0.1"

description = "Extraction functions used by 'share-secrets-safely' CLI. Use it to extract data from YAML files."
license = "LGPL-2.1"
repository = "https://github.com/Byron/share-secrets-safely"
homepage = "https://github.com/Byron/share-secrets-safely/tree/master/lib/extract"
documentation = "https://docs.rs/sheesy-extract"

[badges]
travis-ci = { repository = "Byron/share-secrets-safely" }

[dependencies]
failure = "0.1.1"

[dependencies.sheesy-types]
path = "../types"
version = "1.0.1"
