[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-extract"
version = "3.0.0"

description = "Extraction functions used by 'share-secrets-safely' CLI. Use it to extract data from YAML files."
license = "MIT"
repository = "https://github.com/Byron/share-secrets-safely"
homepage = "https://github.com/Byron/share-secrets-safely/tree/master/lib/extract"
documentation = "https://docs.rs/sheesy-extract"

[badges]
travis-ci = { repository = "Byron/share-secrets-safely" }

[dependencies]
failure = "0.1.1"
