[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-tools"
version = "3.3.0"

description = "Tooling to make using shared secrets effortless."
license = "MIT"
repository = "https://github.com/Byron/share-secrets-safely"
homepage = "https://github.com/Byron/share-secrets-safely/tree/master/lib/tools"
documentation = "https://docs.rs/sheesy-tools"

[badges]
travis-ci = { repository = "Byron/share-secrets-safely" }

[dependencies]
failure = "0.1.1"
atty = "0.2.8"
serde_json = "1.0.11"
serde_yaml = "0.7.3"
serde = "1.0"
yaml-rust = "0.4.0"
glob = "0.2.11"
treediff = {version = "3.0.0", features = ["with-yaml-rust", "with-serde-json"]}
liquid = "0.14.2"
handlebars = "0.32.0"
base64 = "0.9.0"
