[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-tools"
version = "4.0.2"

description = "Tooling to make using shared secrets effortless."
license = "MIT"
repository = "https://github.com/share-secrets-safely/cli"
homepage = "https://github.com/share-secrets-safely/cli/tree/master/lib/tools"
documentation = "https://docs.rs/sheesy-tools"

[badges]
travis-ci = { repository = "share-secrets-safely/cli" }

[features]
default = ["substitute", "process"]
substitute = ["base64", "atty", "handlebars", "liquid", "yaml-rust"]
process = ["yaml-rust", "glob", "treediff", "serde"]

[lib]
doctest = false

[dependencies]
failure = "0.1.1"
atty = {version = "0.2.8", optional = true}
serde_json = "1.0.11"
serde_yaml = "0.7.3"
serde = {version = "1.0", optional = true}
yaml-rust = {version = "0.4.0", optional = true}
glob = {version = "0.2.11", optional = true}
treediff = {version = "3.0.0", features = ["with-yaml-rust", "with-serde-json"], optional = true}
liquid = {version = "0.14.2", optional = true}
handlebars = {version = "1.0", optional = true}
base64 = {version = "0.9.0", optional = true}
