[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-tools"
version = "4.0.9"
edition = "2018"

description = "Tooling to make using shared secrets effortless."
license = "MIT"
repository = "https://github.com/share-secrets-safely/cli"
homepage = "https://github.com/share-secrets-safely/cli/tree/master/lib/tools"
documentation = "https://docs.rs/sheesy-tools"

[features]
default = ["substitute", "process"]
substitute = ["base64", "atty", "handlebars", "liquid", "liquid-error", "yaml-rust"]
process = ["yaml-rust", "glob", "treediff", "serde"]

[lib]
doctest = false

[dependencies]
failure = "0.1.7"
atty = {version = "0.2.14", optional = true}
serde_json = "1.0.51"
serde_yaml = "0.8.11"
serde = {version = "1.0.106", optional = true}
yaml-rust = {version = "0.4.3", optional = true}
glob = {version = "0.3", optional = true}
treediff = {version = "4.0.0", features = ["with-yaml-rust", "with-serde-json"], optional = true}
liquid = {version = "0.19", optional = true}
handlebars = {version = "3.0.1", optional = true}
base64 = {version = "0.12.0", optional = true}
liquid-error = {version = "0.19.0", optional = true}
