[package]
name = "sheesy-types"
version = "1.0.1"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Types used by 'share-secrets-safely' crates."
license = "MIT"
repository = "https://github.com/Byron/share-secrets-safely"
homepage = "https://github.com/Byron/share-secrets-safely/tree/master/lib/types"
documentation = "https://docs.rs/sheesy-types"

[badges]
travis-ci = { repository = "Byron/share-secrets-safely" }

[dependencies]
conv = "0.3.3"
failure = "0.1.1"
failure_derive = "0.1.1"
atty = "0.2.6"
mktemp = "0.3.1"
lazy_static = "1.0.0"
