[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-vault"
version = "3.3.0"

description = "Vault functionality used by 'share-secrets-safely' CLI. Use it to interact with GPG based vaults."
license = "LGPL-2.1"
repository = "https://github.com/share-secrets-safely/cli"
homepage = "https://github.com/share-secrets-safely/cli/tree/master/lib/vault"
documentation = "https://docs.rs/sheesy-vault"

[badges]
travis-ci = { repository = "share-secrets-safely/cli" }

[dependencies]
conv = "0.3.3"
atty = "0.2.6"
lazy_static = "1.0.0"
failure = "0.1.1"
failure_derive = "0.1.1"
gpgme = { version = "0.7.0" }
serde = "1.0.24"
serde_derive = "1.0.24"
serde_yaml = "0.7.3"
itertools = "0.7.4"
yaml-rust = "0.4.0"
glob = "0.2.11"
mktemp = "0.3.1"
