[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "sheesy-vault"
version = "4.0.9"
edition = "2018"

description = "Vault functionality used by 'share-secrets-safely' CLI. Use it to interact with GPG based vaults."
license = "LGPL-2.1"
repository = "https://github.com/share-secrets-safely/cli"
homepage = "https://github.com/share-secrets-safely/cli/tree/master/lib/vault"
documentation = "https://docs.rs/sheesy-vault"

[lib]
doctest = false

[dependencies]
conv = "0.3.3"
atty = "0.2.14"
lazy_static = "1.4.0"
failure = "0.1.7"
failure_derive = "0.1.7"
gpgme = { version = "0.9.2" }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_yaml = "0.8.11"
itertools = "0.9.0"
yaml-rust = "0.4.3"
glob = "0.3"
mktemp = "0.4.0"
